Criação de objetos base e Span Ordenada por PEGI

--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <table border="1">
-    <tr>
-        <th>Month</th>
-        <th>Savings</th>
-    </tr>
-    <tr>
-        <td>January</td>
-        <td>$100</td>
-    </tr>
-    <tr>
-        <td>February</td>
-        <td>$80</td>
-    </tr>
-    <tr>
-        <td colspan="2">Sum: $180</td>
-    </tr>
-    </table>
+    <div id="app">
+
+        <p>Lista de Pessoas ordenada por PEGI:</p>
+        <span id="spanOrderedPorPEGI"></span>
+
+        <ul></ul>
+
+        <input type="text" placeholder="Escreva aqui">
+        <button>Adicionar</button>
+        <script src="./principal.js"></script>
+
+
+    </div>
+
+
 </body>
+
 </html>
